--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 		<span class="info">My name is..</span><br>
 		<span class="brand myname">PRATIKSHA AWASTHI</span><br>
 		<span class="info">I am a <span class="designation">Software Engineer</span></span>
-		<button href="demo.pdf" class="rsmbtn">RESUME</button>
+		<button href="C:\Users\Pratiksha Awasthi\Downloads\PRATIKSHA AWASTHI resume.pdf" class="rsmbtn">RESUME</button>
 	</div>
 
 </section>
 <section id="about" class="portfolio-sections about-section">
 	<div class="aboutmain">
 		<div class="myimage">
-			<img class="minion kenburns-bottom" src="https://cdn2.iconfinder.com/data/icons/job-promotion-1/50/11-256.png">
+			<img class="minion kenburns-bottom" src="D:\Documents\Pratiksha photo.png">
 		</div>
 		<div class="carrerobj">
 	<h1 class="heading">ABOUT</h1>
@@ -124,7 +124,7 @@
     <h5 class="card-title">Decor Dreamer</h5>
     <p class="card-text">It is a mobile application for virtual interior design, where user can explore various designs.</p>
   </div>
-  <ul class="list-group list-group-flush">
+  <ul class="list-group list-group-flush" type="none">
     <li class="list-group-item">Frontend - Android,XML</li>
     <li class="list-group-item">Backend - JAVA,Firebase</li>
     <li><a href="#" class="list-group-item">link</a></li>
@@ -132,12 +132,12 @@
 </div>
 
  <div class="project-card-container" style="width: 20rem; padding-left: 30px;">
-  <img src="https://png.pngtree.com/png-clipart/20181008/ourmid/pngtree-facebook-logo-icon-design-vector-free-logo-design-template-png-image_3652951.png" class="card-img-top" style="height: 230px;">
+  <img src="https://png.pngtree.com/png-clipart/20181008/ourmid/pngtree-facebook-logo-icon-design-vector-free-logo-design-template-png-image_3652951.png" class="card-img-top" style="height: 200px;">
   <div class="card-body">
     <h5 class="card-title">Facebook Clone</h5>
     <p class="card-text">It is a mobile application for virtual interior design, where user can explore various designs.</p>
   </div>
-  <ul class="list-group list-group-flush">
+  <ul class="list-group list-group-flush" type="none">
     <li class="list-group-item">Frontend - Android,XML</li>
     <li class="list-group-item">Backend - JAVA,Firebase</li>
     <li><a href="#" class="list-group-item">link</a></li>
